@@ -4,6 +4,7 @@
 ; Double quotes in the values have to be formatted as "_QQ_"
 
 COM_PODCASTMANAGER="Podcast Manager"
+COM_PODCASTMANAGER_ERROR_INSTALL_J17="This release of Podcast Manager requires Joomla! 1.7 or newer"
 COM_PODCASTMANAGER_VIEW_DEFAULT_DESCRIPTION="Allows users to submit new podcast episodes."
 COM_PODCASTMANAGER_VIEW_DEFAULT_OPTION="Add a Podcast Episode"
 COM_PODCASTMANAGER_VIEW_DEFAULT_TITLE="Add a Podcast Episode"
